# django-admin-action-forms

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build-package.sh  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
django_admin_action_forms/: __init__.py  admin.py  apps.py  decorators.py  forms.py  formsets.py  options.py  urls.py  views.py  widgets.py
django_admin_action_forms/locale/de/LC_MESSAGES/: django.po
django_admin_action_forms/locale/en/LC_MESSAGES/: django.po
django_admin_action_forms/locale/fr/LC_MESSAGES/: django.po
django_admin_action_forms/locale/it/LC_MESSAGES/: django.po
django_admin_action_forms/locale/nl/LC_MESSAGES/: django.po
django_admin_action_forms/locale/pl/LC_MESSAGES/: django.po
django_admin_action_forms/locale/pt/LC_MESSAGES/: django.po
django_admin_action_forms/locale/ru/LC_MESSAGES/: django.po
django_admin_action_forms/locale/sv/LC_MESSAGES/: django.po
django_admin_action_forms/static/django_admin_action_forms/css/: action_form.css
django_admin_action_forms/static/django_admin_action_forms/js/: action_form_autocomplete.js
django_admin_action_forms/templates/admin/django_admin_action_forms/: action_form.html
django_admin_action_forms/templates/django_admin_action_forms/: action_form.html
django_admin_action_forms/templates/django_admin_action_forms/inlines/: stacked.html  tabular.html
